--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <meta property="og:description" content="Practical tech service & support in Taupō.">
   <meta property="og:type" content="website">
   <meta property="og:locale" content="en_NZ">
-  <meta property="og:url" content="https://<your-username>.github.io/<repo>/">
-  <meta property="og:image" content="https://<your-username>.github.io/<repo>/og-image.png">
+  <meta property="og:url" content="https://triptastic.github.io/milltech/">
+  <meta property="og:image" content="https://triptastic.github.io/milltech/og-image.png">
 
   <link rel="icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,7 +36,7 @@
     },
     "email": "sales@milltechtaupo.co.nz",
     "telephone": "+64-7-378-4523",
-    "url": "https://<your-username>.github.io/<repo>/"
+    "url": "https://triptastic.github.io/milltech/"
   }
   </script>
 </head>
