--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
         <a class="link" href="tel:+6473784523">07 378 4523</a>
       </address>
 
-      <nav class="cta">
-        <a class="btn" href="tel:+6473784523">Call</a>
-        <a class="btn outline" href="mailto:sales@milltechtaupo.co.nz">Email</a>
-        <a class="btn subtle" href="https://maps.google.com/?q=25%20M%C4%81nuka%20Street%2C%20Tauhara%2C%20Taup%C5%8D%203378" rel="noopener">Find us</a>
-      </nav>
+    <nav class="cta">
+      <a class="btn" href="tel:+6473784523">Call</a>
+      <a class="btn" href="mailto:sales@milltechtaupo.co.nz">Email</a>
+      <a class="btn" href="https://maps.google.com/?q=25%20M%C4%81nuka%20Street%2C%20Tauhara%2C%20Taup%C5%8D%203378" rel="noopener">Find us</a>
+    </nav>
     </section>
 
     <footer class="foot">
