--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
 <body>
   <main class="wrap">
     <section class="card" role="region" aria-label="Company details">
+
+      <div class="logo-wrap">
+        <img src="globe.jpg" alt="Globe logo" class="globe">
+      </div>
+      
       <h1 class="brand">Millennium Technology<span class="dot">.</span></h1>
       <p class="tagline">Practical tech service & support in Taupō.</p>
 
