--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section class="card" role="region" aria-label="Company details">
 
       <div class="logo-wrap">
-        <img src="globe.jpg" alt="Globe logo" class="globe">
+        <img src="globe.png" alt="Globe logo" class="globe">
       </div>
       
       <h1 class="brand">Millennium Technology<span class="dot">.</span></h1>
