--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   {
     "@context": "https://schema.org",
     "@type": "Organization",
-    "name": "Millennium Technology",
+    "name": "MILLENNIUM TECHNOLOGY",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "25 Mānuka Street, Tauhara",
