--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <img src="globe.png" alt="Globe logo" class="globe">
       </div>
       
-      <h1 class="brand">Millennium Technology<span class="dot">.</span></h1>
+      <h1 class="brand">MILLENNIUM TECHNOLOGY<span class="dot">.</span></h1>
       <p class="tagline">Practical tech service & support in Taupō.</p>
 
       <address class="info">
