Update footer text to uppercase for consistency

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </section>
 
     <footer class="foot">
-      <small>© <span id="y"></span> Millennium Technology • Taupō, New Zealand</small>
+      <small>© <span id="y"></span> MILLENNIUM TECHNOLOGY • Taupō, New Zealand</small>
     </footer>
   </main>
 
